--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "@types/node": "^16.18.116",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "immer": "^10.1.1",
     "mobx": "^6.13.5",
     "mobx-react-lite": "^4.0.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
+    "use-immer": "^0.10.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
