--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://github.com/YouAreNotHere/Apricode_Test",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
@@ -16,6 +17,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
+    "sass": "^1.80.6",
     "typescript": "^4.9.5",
     "use-immer": "^0.10.0",
     "web-vitals": "^2.1.4"
@@ -26,7 +28,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -47,6 +51,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^6.2.0",
     "prettier": "^3.3.3"
   }
 }
