Оказывается вчера поправляя баг, создал другой. Пофиксил

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/YouAreNotHere/Apricode_Test",
+  "homepage": "https://YouAreNotHere.github.io/Apricode_Test",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
